--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 16.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">42 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Bollinger Bands: The BEST Strategy for Long-Term Gains? #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US POKEMON CHAOS MODE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Do Aliens Exist? – NASA Astronaut Sunita Williams & Sadhguru at Harvard Medical School</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 14.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1454,7 +1454,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Strategy Development with Edgewonk - 02.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 16.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">42 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Bollinger Bands: The BEST Strategy for Long-Term Gains? #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5182,7 +5182,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 14.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5655,7 +5655,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Strategy Development with Edgewonk - 02.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Do Aliens Exist? – NASA Astronaut Sunita Williams & Sadhguru at Harvard Medical School</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US POKEMON CHAOS MODE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
