--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Unable to Quit Smoking? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 minutes ago</div>
+                        <div class="date">28 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Art of Letting Go</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 16.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Bollinger Bands: The BEST Strategy for Long-Term Gains? #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>What's really stopping traders in 2025?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1175,9 +1175,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=F6ZfZchnwXk" target="_blank">
-                    <img src="https://i.ytimg.com/vi/F6ZfZchnwXk/mqdefault.jpg" alt="How to make Grandma Style Pizza At Home In The Same Day">
+                    <img src="https://i.ytimg.com/vi/F6ZfZchnwXk/mqdefault.jpg" alt="Same Day Grandma Style Pizza At Home 100%">
                     <div class="video-info">
-                        <h3>How to make Grandma Style Pizza At Home In The Same Day</h3>
+                        <h3>Same Day Grandma Style Pizza At Home 100%</h3>
                         <div class="channel">Vito Iacopelli</div>
                         <div class="date">1 week ago</div>
                     </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 16.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Bollinger Bands: The BEST Strategy for Long-Term Gains? #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5347,7 +5347,7 @@
                         <div class="video-info">
                             <h3>What's really stopping traders in 2025?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Unable to Quit Smoking? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 minutes ago</div>
+                            <div class="date">28 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Art of Letting Go</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -8830,9 +8830,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=F6ZfZchnwXk" target="_blank">
-                        <img src="https://i.ytimg.com/vi/F6ZfZchnwXk/mqdefault.jpg" alt="How to make Grandma Style Pizza At Home In The Same Day">
+                        <img src="https://i.ytimg.com/vi/F6ZfZchnwXk/mqdefault.jpg" alt="Same Day Grandma Style Pizza At Home 100%">
                         <div class="video-info">
-                            <h3>How to make Grandma Style Pizza At Home In The Same Day</h3>
+                            <h3>Same Day Grandma Style Pizza At Home 100%</h3>
                             <div class="channel">Vito Iacopelli</div>
                             <div class="date">1 week ago</div>
                         </div>
